--- a/index.html
+++ b/index.html
@@ -597,14 +597,17 @@
           <span class="description-title">Não-cirúrgicos</span>
           <h2>Não-cirúrgicos</h2>
         </div><!-- End Section Title -->
-
         <div class="container">
-
-          <ul class="justify-content-center nav nav-tabs row g-2 d-flex" data-aos="fade-up" data-aos-delay="100" role="tablist">
+          <ul class="justify-content-center nav nav-tabs row g-2 d-flex" data-aos="fade-up" data-aos-delay="100"
+            role="tablist">
             <li class="nav-item col-lg-2" role="presentation">
               <a class="nav-link" id="bioestimuladores-tab" role="tab" aria-controls="bioestimuladores"
                 aria-selected="true" data-bs-toggle="modal" data-bs-target="#bioestimuladoresModal">
                 <h4>Bioestimuladores</h4>
+                <button class="btn btn-sm saiba-mais" data-bs-toggle="modal"
+                  data-bs-target="#bioestimuladoresModal">
+                  Saiba Mais
+                </button>
               </a>
             </li><!-- End tab nav item -->
 
@@ -612,13 +615,20 @@
               <a class="nav-link" id="botox-tab" role="tab" aria-controls="botox" aria-selected="false"
                 data-bs-toggle="modal" data-bs-target="#botoxModal">
                 <h4>Botox</h4>
-              </a><!-- End tab nav item -->
-            </li>
+                <button class="btn btn-sm saiba-mais" data-bs-toggle="modal" data-bs-target="#botoxModal">
+                  Saiba Mais
+                </button>
+              </a>
+            </li><!-- End tab nav item -->
 
             <li class="nav-item col-lg-2" role="presentation">
               <a class="nav-link" id="preenchimento-tab" role="tab" aria-controls="preenchimento" aria-selected="false"
                 data-bs-toggle="modal" data-bs-target="#preenchimentoModal">
                 <h4>Preenchimento</h4>
+                <button class="btn btn-sm saiba-mais" data-bs-toggle="modal"
+                  data-bs-target="#preenchimentoModal">
+                  Saiba Mais
+                </button>
               </a>
             </li><!-- End tab nav item -->
 
@@ -626,6 +636,9 @@
               <a class="nav-link" id="fios-tab" role="tab" aria-controls="fios" aria-selected="false"
                 data-bs-toggle="modal" data-bs-target="#fiosModal">
                 <h4>Fios</h4>
+                <button class="btn btn-sm saiba-mais" data-bs-toggle="modal" data-bs-target="#fiosModal">
+                  Saiba Mais
+                </button>
               </a>
             </li><!-- End tab nav item -->
 
@@ -633,11 +646,15 @@
               <a class="nav-link" id="ultraformer-tab" role="tab" aria-controls="ultraformer" aria-selected="false"
                 data-bs-toggle="modal" data-bs-target="#ultraformerModal">
                 <h4>Ultraformer</h4>
+                <button class="btn btn-sm saiba-mais" data-bs-toggle="modal"
+                  data-bs-target="#ultraformerModal">
+                  Saiba Mais
+                </button>
               </a>
             </li><!-- End tab nav item -->
           </ul>
-
         </div>
+
 
         <!-- Modais -->
 
