change opacity whatsapp icon at all btns

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               <a href="https://api.whatsapp.com/send?phone=5521995088934" class="btn-get-started scrollto">Agendar
                 Consulta <i class="bi bi-whatsapp d-lg-inline d-xl-inline"
                   style="margin-left: 5px; font-size: medium;"></i></a>
-              </a>
+
             </div>
           </div><!-- End Carousel Item -->
 
@@ -604,8 +604,7 @@
               <a class="nav-link" id="bioestimuladores-tab" role="tab" aria-controls="bioestimuladores"
                 aria-selected="true" data-bs-toggle="modal" data-bs-target="#bioestimuladoresModal">
                 <h4>Bioestimuladores</h4>
-                <button class="btn btn-sm saiba-mais" data-bs-toggle="modal"
-                  data-bs-target="#bioestimuladoresModal">
+                <button class="btn btn-sm saiba-mais" data-bs-toggle="modal" data-bs-target="#bioestimuladoresModal">
                   Saiba Mais
                 </button>
               </a>
@@ -625,8 +624,7 @@
               <a class="nav-link" id="preenchimento-tab" role="tab" aria-controls="preenchimento" aria-selected="false"
                 data-bs-toggle="modal" data-bs-target="#preenchimentoModal">
                 <h4>Preenchimento</h4>
-                <button class="btn btn-sm saiba-mais" data-bs-toggle="modal"
-                  data-bs-target="#preenchimentoModal">
+                <button class="btn btn-sm saiba-mais" data-bs-toggle="modal" data-bs-target="#preenchimentoModal">
                   Saiba Mais
                 </button>
               </a>
@@ -646,8 +644,7 @@
               <a class="nav-link" id="ultraformer-tab" role="tab" aria-controls="ultraformer" aria-selected="false"
                 data-bs-toggle="modal" data-bs-target="#ultraformerModal">
                 <h4>Ultraformer</h4>
-                <button class="btn btn-sm saiba-mais" data-bs-toggle="modal"
-                  data-bs-target="#ultraformerModal">
+                <button class="btn btn-sm saiba-mais" data-bs-toggle="modal" data-bs-target="#ultraformerModal">
                   Saiba Mais
                 </button>
               </a>
