change border saiba-mais content

--- a/index.html
+++ b/index.html
@@ -758,7 +758,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
               <div class="modal-body">
-                <p><strong>Ultraformer</strong> é um ultrassom micro e macrofocado, usado em tratamentos faciais e
+                <p>Ultraformer é um ultrassom micro e macrofocado, usado em tratamentos faciais e
                   corporais. Ele atua em profundidades diferentes, estimulando a produção de colágeno, promovendo efeito
                   lifting e destruindo células gordurosas.</p>
               </div>
