change saiba-mais close btn color

--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
             <div class="modal-content">
               <div class="modal-header">
                 <h5 class="modal-title" id="bioestimuladoresModalLabel">Bioestimuladores de colágeno</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
               <div class="modal-body">
                 <h5>Como funcionam?</h5>
@@ -691,7 +691,7 @@
             <div class="modal-content">
               <div class="modal-header">
                 <h5 class="modal-title" id="botoxModalLabel">Botox</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
               <div class="modal-body">
                 <h5>Como ele age?</h5>
@@ -715,7 +715,7 @@
             <div class="modal-content">
               <div class="modal-header">
                 <h5 class="modal-title" id="preenchimentoModalLabel">Preenchimento</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
               <div class="modal-body">
                 <h5>Facial</h5>
@@ -738,7 +738,7 @@
             <div class="modal-content">
               <div class="modal-header">
                 <h5 class="modal-title" id="fiosModalLabel">Fios</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
               <div class="modal-body">
                 <p>Existem hoje diversos tipos e marcas de fios de sustentação, geralmente eles são absorvíveis e por
@@ -755,7 +755,7 @@
             <div class="modal-content">
               <div class="modal-header">
                 <h5 class="modal-title" id="ultraformerModalLabel">Ultraformer</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
               <div class="modal-body">
                 <p>Ultraformer é um ultrassom micro e macrofocado, usado em tratamentos faciais e
