--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                   <i class="faq-toggle bi bi-chevron-right"></i>
                 </div><!-- End Faq item-->
 
-                <div class="faq-item">
+                <div class="faq-item mb-3">
                   <h3>Mastopexia</h3>
                   <div class="faq-content">
                     <p class="fst-italic">Cirurgia indicada para corrigir a flacidez e queda das mamas.</p>
@@ -361,7 +361,6 @@
                   <i class="faq-toggle bi bi-chevron-right"></i>
                 </div><!-- End Faq item-->
               </div>
-
               <!-- Segunda coluna -->
               <div class="col-lg-6">
                 <div class="faq-item">
