--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
           <div class="faq-container">
             <div class="row" data-aos="fade-up" data-aos-delay="300">
               <!-- Primeira coluna -->
-              <div class="col-lg-6">
+              <div class="col-12 col-md-6">
 
 
                 <div class="faq-item">
@@ -362,7 +362,7 @@
                 </div><!-- End Faq item-->
               </div>
               <!-- Segunda coluna -->
-              <div class="col-lg-6">
+              <div class="col-12 col-md-6">
                 <div class="faq-item">
                   <h3>Mamoplastia de Aumento</h3>
                   <div class="faq-content">
@@ -498,9 +498,7 @@
               <a class="nav-link" id="bioestimuladores-tab" role="tab" aria-controls="bioestimuladores"
                 aria-selected="true" data-bs-toggle="modal" data-bs-target="#bioestimuladoresModal">
                 <h4>Bioestimuladores</h4>
-                <button class="btn btn-sm saiba-mais" data-bs-toggle="modal" data-bs-target="#bioestimuladoresModal">
-                  Saiba Mais
-                </button>
+                <i class="bi bi-plus-circle animated-icon"></i>
               </a>
             </li><!-- End tab nav item -->
 
@@ -508,9 +506,7 @@
               <a class="nav-link" id="botox-tab" role="tab" aria-controls="botox" aria-selected="false"
                 data-bs-toggle="modal" data-bs-target="#botoxModal">
                 <h4>Botox</h4>
-                <button class="btn btn-sm saiba-mais" data-bs-toggle="modal" data-bs-target="#botoxModal">
-                  Saiba Mais
-                </button>
+                <i class="bi bi-plus-circle animated-icon"></i>
               </a>
             </li><!-- End tab nav item -->
 
@@ -518,9 +514,7 @@
               <a class="nav-link" id="preenchimento-tab" role="tab" aria-controls="preenchimento" aria-selected="false"
                 data-bs-toggle="modal" data-bs-target="#preenchimentoModal">
                 <h4>Preenchimento</h4>
-                <button class="btn btn-sm saiba-mais" data-bs-toggle="modal" data-bs-target="#preenchimentoModal">
-                  Saiba Mais
-                </button>
+                <i class="bi bi-plus-circle animated-icon"></i>
               </a>
             </li><!-- End tab nav item -->
 
@@ -528,9 +522,7 @@
               <a class="nav-link" id="fios-tab" role="tab" aria-controls="fios" aria-selected="false"
                 data-bs-toggle="modal" data-bs-target="#fiosModal">
                 <h4>Fios</h4>
-                <button class="btn btn-sm saiba-mais" data-bs-toggle="modal" data-bs-target="#fiosModal">
-                  Saiba Mais
-                </button>
+                <i class="bi bi-plus-circle animated-icon"></i>
               </a>
             </li><!-- End tab nav item -->
 
@@ -538,9 +530,7 @@
               <a class="nav-link" id="ultraformer-tab" role="tab" aria-controls="ultraformer" aria-selected="false"
                 data-bs-toggle="modal" data-bs-target="#ultraformerModal">
                 <h4>Ultraformer</h4>
-                <button class="btn btn-sm saiba-mais" data-bs-toggle="modal" data-bs-target="#ultraformerModal">
-                  Saiba Mais
-                </button>
+                <i class="bi bi-plus-circle animated-icon"></i>
               </a>
             </li><!-- End tab nav item -->
           </ul>
