improve procedimentos non

--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
             <li class="nav-item col-lg-2" role="presentation">
               <a class="nav-link" id="bioestimuladores-tab" role="tab" aria-controls="bioestimuladores"
                 aria-selected="true" data-bs-toggle="modal" data-bs-target="#bioestimuladoresModal">
-                <h4>Bioestimuladores</h4>
+                <h4 class="icon-text">Bioestimuladores </h4>
                 <i class="bi bi-plus-circle animated-icon"></i>
               </a>
             </li><!-- End tab nav item -->
@@ -505,7 +505,7 @@
             <li class="nav-item col-lg-2" role="presentation">
               <a class="nav-link" id="botox-tab" role="tab" aria-controls="botox" aria-selected="false"
                 data-bs-toggle="modal" data-bs-target="#botoxModal">
-                <h4>Botox</h4>
+                <h4 class="icon-text">Botox</h4>
                 <i class="bi bi-plus-circle animated-icon"></i>
               </a>
             </li><!-- End tab nav item -->
@@ -513,7 +513,7 @@
             <li class="nav-item col-lg-2" role="presentation">
               <a class="nav-link" id="preenchimento-tab" role="tab" aria-controls="preenchimento" aria-selected="false"
                 data-bs-toggle="modal" data-bs-target="#preenchimentoModal">
-                <h4>Preenchimento</h4>
+                <h4 class="icon-text">Preenchimento</h4>
                 <i class="bi bi-plus-circle animated-icon"></i>
               </a>
             </li><!-- End tab nav item -->
@@ -521,7 +521,7 @@
             <li class="nav-item col-lg-2" role="presentation">
               <a class="nav-link" id="fios-tab" role="tab" aria-controls="fios" aria-selected="false"
                 data-bs-toggle="modal" data-bs-target="#fiosModal">
-                <h4>Fios</h4>
+                <h4 class="icon-text">Fios</h4>
                 <i class="bi bi-plus-circle animated-icon"></i>
               </a>
             </li><!-- End tab nav item -->
@@ -529,7 +529,7 @@
             <li class="nav-item col-lg-2" role="presentation">
               <a class="nav-link" id="ultraformer-tab" role="tab" aria-controls="ultraformer" aria-selected="false"
                 data-bs-toggle="modal" data-bs-target="#ultraformerModal">
-                <h4>Ultraformer</h4>
+                <h4 class="icon-text">Ultraformer</h4>
                 <i class="bi bi-plus-circle animated-icon"></i>
               </a>
             </li><!-- End tab nav item -->
