improve procedimentos non

--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
             <div class="carousel-container">
               <h1 class="doctor-name">Franciane&nbsp;Rossone</h1>
               <h3 class="subtitulo">Cirurgia&nbsp;Plástica</h3>
-              <a href="https://api.whatsapp.com/send?phone=5521995088934" class="btn-get-started scrollto">Agendar
-                Consulta <i class="bi bi-whatsapp d-lg-inline d-xl-inline"
-                  style="margin-left: 5px; font-size: medium;"></i></a>
+              <a href="https://api.whatsapp.com/send?phone=5521995088934" class="appointment-btn scrollto">
+                <span class="d-none d-lg-inline-flex">Agendar</span> Consulta
+                <i class="bi bi-whatsapp d-lg-inline d-xl-inline" style="margin-left: 5px; font-size: medium;"></i></a>
 
             </div>
           </div><!-- End Carousel Item -->
@@ -95,10 +95,9 @@
             <img class="top-aligned" src="assets/img/hero-carousel/fr1.jpg" alt="">
             <div class="carousel-container">
               <h2>Você na sua melhor versão</h2>
-              <a href="https://api.whatsapp.com/send?phone=5521995088934" class="btn-get-started scrollto">Agendar
-                Consulta <i class="bi bi-whatsapp d-lg-inline d-xl-inline"
-                  style="margin-left: 5px; font-size: medium;"></i></a>
-              </a>
+              <a href="https://api.whatsapp.com/send?phone=5521995088934" class="appointment-btn scrollto">
+                <span class="d-none d-lg-inline-flex">Agendar</span> Consulta
+                <i class="bi bi-whatsapp d-lg-inline d-xl-inline" style="margin-left: 5px; font-size: medium;"></i></a>
             </div>
           </div><!-- End Carousel Item -->
 
@@ -197,8 +196,10 @@
                 <h3>A Clínica</h3>
                 <p>Sinta-se sempre bem-vindo(a) à nossa clínica e desfrute dos
                   nossos cuidados focados no seu bem-estar e beleza.</p>
-                <a class="cta-btn" href="https://api.whatsapp.com/send?phone=5521995088934">Agendar Consulta <i
-                    class="bi bi-whatsapp d-lg-inline d-xl-inline" style="margin-left: 5px; font-size: medium;"></i></a>
+                <a href="https://api.whatsapp.com/send?phone=5521995088934" class="appointment-btn scrollto">
+                  <span class="d-none d-lg-inline-flex">Agendar</span> Consulta
+                  <i class="bi bi-whatsapp d-lg-inline d-xl-inline"
+                    style="margin-left: 5px; font-size: medium;"></i></a>
               </div>
             </div>
           </div>
@@ -497,40 +498,40 @@
             <li class="nav-item col-lg-2" role="presentation">
               <a class="nav-link" id="bioestimuladores-tab" role="tab" aria-controls="bioestimuladores"
                 aria-selected="true" data-bs-toggle="modal" data-bs-target="#bioestimuladoresModal">
-                <h4 class="icon-text">Bioestimuladores </h4>
                 <i class="bi bi-plus-circle animated-icon"></i>
+                <h4 class="icon-text">Bioestimuladores </h4>
               </a>
             </li><!-- End tab nav item -->
 
             <li class="nav-item col-lg-2" role="presentation">
               <a class="nav-link" id="botox-tab" role="tab" aria-controls="botox" aria-selected="false"
                 data-bs-toggle="modal" data-bs-target="#botoxModal">
-                <h4 class="icon-text">Botox</h4>
                 <i class="bi bi-plus-circle animated-icon"></i>
+                <h4 class="icon-text">Botox</h4>
               </a>
             </li><!-- End tab nav item -->
 
             <li class="nav-item col-lg-2" role="presentation">
               <a class="nav-link" id="preenchimento-tab" role="tab" aria-controls="preenchimento" aria-selected="false"
                 data-bs-toggle="modal" data-bs-target="#preenchimentoModal">
-                <h4 class="icon-text">Preenchimento</h4>
                 <i class="bi bi-plus-circle animated-icon"></i>
+                <h4 class="icon-text">Preenchimento</h4>
               </a>
             </li><!-- End tab nav item -->
 
             <li class="nav-item col-lg-2" role="presentation">
               <a class="nav-link" id="fios-tab" role="tab" aria-controls="fios" aria-selected="false"
                 data-bs-toggle="modal" data-bs-target="#fiosModal">
-                <h4 class="icon-text">Fios</h4>
                 <i class="bi bi-plus-circle animated-icon"></i>
+                <h4 class="icon-text">Fios</h4>
               </a>
             </li><!-- End tab nav item -->
 
             <li class="nav-item col-lg-2" role="presentation">
               <a class="nav-link" id="ultraformer-tab" role="tab" aria-controls="ultraformer" aria-selected="false"
                 data-bs-toggle="modal" data-bs-target="#ultraformerModal">
-                <h4 class="icon-text">Ultraformer</h4>
                 <i class="bi bi-plus-circle animated-icon"></i>
+                <h4 class="icon-text">Ultraformer</h4>
               </a>
             </li><!-- End tab nav item -->
           </ul>
