--- a/index.html
+++ b/index.html
@@ -498,40 +498,40 @@
             <li class="nav-item col-lg-2" role="presentation">
               <a class="nav-link" id="bioestimuladores-tab" role="tab" aria-controls="bioestimuladores"
                 aria-selected="true" data-bs-toggle="modal" data-bs-target="#bioestimuladoresModal">
-                <i class="bi bi-plus-circle animated-icon"></i>
-                <h4 class="icon-text">Bioestimuladores </h4>
+                <h4 class="icon-text">Bioestimuladores <i class="bi bi-arrow-right-circle animated-icon"></i>
+                </h4>
               </a>
             </li><!-- End tab nav item -->
 
             <li class="nav-item col-lg-2" role="presentation">
               <a class="nav-link" id="botox-tab" role="tab" aria-controls="botox" aria-selected="false"
                 data-bs-toggle="modal" data-bs-target="#botoxModal">
-                <i class="bi bi-plus-circle animated-icon"></i>
-                <h4 class="icon-text">Botox</h4>
+                <h4 class="icon-text">Botox <i class="bi bi-arrow-right-circle animated-icon"></i>
+                </h4>
               </a>
             </li><!-- End tab nav item -->
 
             <li class="nav-item col-lg-2" role="presentation">
               <a class="nav-link" id="preenchimento-tab" role="tab" aria-controls="preenchimento" aria-selected="false"
                 data-bs-toggle="modal" data-bs-target="#preenchimentoModal">
-                <i class="bi bi-plus-circle animated-icon"></i>
-                <h4 class="icon-text">Preenchimento</h4>
+                <h4 class="icon-text">Preenchimento <i class="bi bi-arrow-right-circle animated-icon"></i>
+                </h4>
               </a>
             </li><!-- End tab nav item -->
 
             <li class="nav-item col-lg-2" role="presentation">
               <a class="nav-link" id="fios-tab" role="tab" aria-controls="fios" aria-selected="false"
                 data-bs-toggle="modal" data-bs-target="#fiosModal">
-                <i class="bi bi-plus-circle animated-icon"></i>
-                <h4 class="icon-text">Fios</h4>
+                <h4 class="icon-text">Fios <i class="bi bi-arrow-right-circle animated-icon"></i>
+                </h4>
               </a>
             </li><!-- End tab nav item -->
 
             <li class="nav-item col-lg-2" role="presentation">
               <a class="nav-link" id="ultraformer-tab" role="tab" aria-controls="ultraformer" aria-selected="false"
                 data-bs-toggle="modal" data-bs-target="#ultraformerModal">
-                <i class="bi bi-plus-circle animated-icon"></i>
-                <h4 class="icon-text">Ultraformer</h4>
+                <h4 class="icon-text">Ultraformer <i class="bi bi-arrow-right-circle animated-icon"></i>
+                </h4>
               </a>
             </li><!-- End tab nav item -->
           </ul>
