correct appointment btn

--- a/index.html
+++ b/index.html
@@ -63,9 +63,12 @@
             </ul>
             <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
           </nav>
-          <a href="https://api.whatsapp.com/send?phone=5521995088934" class="appointment-btn scrollto">
-            <span class="d-none d-lg-inline-flex">Agendar</span> Consulta
-            <i class="bi bi-whatsapp d-lg-inline d-xl-inline" style="margin-left: 5px; font-size: medium;"></i></a>
+          <div class="d-flex justify-content-center mt-3">
+            <a href="https://api.whatsapp.com/send?phone=5521995088934" class="appointment-btn scrollto">
+              <span class="d-none d-lg-inline-flex">Agendar</span> Consulta
+              <i class="bi bi-whatsapp d-lg-inline d-xl-inline" style="margin-left: 5px; font-size: medium;"></i>
+            </a>
+          </div>
         </div>
 
       </div>
@@ -84,10 +87,12 @@
             <div class="carousel-container">
               <h1 class="doctor-name">Franciane&nbsp;Rossone</h1>
               <h3 class="subtitulo">Cirurgia&nbsp;Plástica</h3>
-              <a href="https://api.whatsapp.com/send?phone=5521995088934" class="appointment-btn scrollto">
-                <span class="d-none d-lg-inline-flex">Agendar</span> Consulta
-                <i class="bi bi-whatsapp d-lg-inline d-xl-inline" style="margin-left: 5px; font-size: medium;"></i></a>
-
+              <div class="d-flex justify-content-center mt-3">
+                <a href="https://api.whatsapp.com/send?phone=5521995088934" class="appointment-btn scrollto">
+                  <span class="d-none d-lg-inline-flex">Agendar</span> Consulta
+                  <i class="bi bi-whatsapp d-lg-inline d-xl-inline" style="margin-left: 5px; font-size: medium;"></i>
+                </a>
+              </div>
             </div>
           </div><!-- End Carousel Item -->
 
@@ -95,9 +100,12 @@
             <img class="top-aligned" src="assets/img/hero-carousel/fr1.jpg" alt="">
             <div class="carousel-container">
               <h2>Você na sua melhor versão</h2>
-              <a href="https://api.whatsapp.com/send?phone=5521995088934" class="appointment-btn scrollto">
-                <span class="d-none d-lg-inline-flex">Agendar</span> Consulta
-                <i class="bi bi-whatsapp d-lg-inline d-xl-inline" style="margin-left: 5px; font-size: medium;"></i></a>
+              <div class="d-flex justify-content-center mt-3">
+                <a href="https://api.whatsapp.com/send?phone=5521995088934" class="appointment-btn scrollto">
+                  <span class="d-none d-lg-inline-flex">Agendar</span> Consulta
+                  <i class="bi bi-whatsapp d-lg-inline d-xl-inline" style="margin-left: 5px; font-size: medium;"></i>
+                </a>
+              </div>
             </div>
           </div><!-- End Carousel Item -->
 
@@ -196,10 +204,12 @@
                 <h3>A Clínica</h3>
                 <p>Sinta-se sempre bem-vindo(a) à nossa clínica e desfrute dos
                   nossos cuidados focados no seu bem-estar e beleza.</p>
-                <a href="https://api.whatsapp.com/send?phone=5521995088934" class="appointment-btn scrollto">
-                  <span class="d-none d-lg-inline-flex">Agendar</span> Consulta
-                  <i class="bi bi-whatsapp d-lg-inline d-xl-inline"
-                    style="margin-left: 5px; font-size: medium;"></i></a>
+                <div class="d-flex justify-content-center mt-3">
+                  <a href="https://api.whatsapp.com/send?phone=5521995088934" class="appointment-btn scrollto">
+                    <span class="d-none d-lg-inline-flex">Agendar</span> Consulta
+                    <i class="bi bi-whatsapp d-lg-inline d-xl-inline" style="margin-left: 5px; font-size: medium;"></i>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
